--- a/.github/workflows/feature_push.yml
+++ b/.github/workflows/feature_push.yml
@@ -1,9 +1,9 @@
 name: spring-pet-clinic
 
 on:
-    pull_request:
+    push:
         branches:
-            - main
+            - 'feature/**'
 
 jobs:
     build:
