--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -5,6 +5,9 @@ on:
         branches:
             - 'feature/**'
 
+permissions:
+    checks: write
+
 jobs:
     build:
         runs-on: ubuntu-24.04
@@ -13,7 +16,7 @@ jobs:
               uses: actions/checkout@v4
             
             - name: Run maven package
-              run: mvn package
+              run: mvn clean package
             
             - name: Artifact upload
               uses: actions/upload-artifact@v4
